Configure runner out-of-band

--- a/out-of-band/Makefile
+++ b/out-of-band/Makefile
@@ -1,4 +1,4 @@
-all: pubkey instance
+all: pubkey instance domain
 
 build/cloud-init.sh: build/registration_token.json cloud-init.sh
 	$(info [Script] Compile Cloud Init Script)
