--- a/client/Makefile
+++ b/client/Makefile
@@ -2,3 +2,5 @@ include ../common.mk
 
 test: .venv/ready #: Run client unit tests
 	$(venv) pytest --cov=. --cov-fail-under=100
+
+clean: clean_build #: Clean up test venv
