--- a/service/Makefile
+++ b/service/Makefile
@@ -9,6 +9,9 @@ apply: main.tf build/tf_init build_ami #: Launch an instance
 	terraform validate
 	terraform apply -auto-approve
 
+destroy: build/tf_init #: Destroy terraform infrastructure
+	terraform destroy -auto-approve
+
 build_ami: build/ami_name.txt update_ami_cache #: Build the latest AMI
 	make build/amis/`cat $<`
 
