Using a cloudfront distribution

--- a/infrastructure/Makefile
+++ b/infrastructure/Makefile
@@ -3,10 +3,14 @@ include ../common.mk
 test: #: Run a fake test
 	@echo "okay!"
 
-apply: main.tf build/tf_init #: Launch an instance
+apply: build/tf_init #: Create AWS Resources
 	make -C image ami
 	terraform validate
 	terraform apply -auto-approve
+
+plan: build/tf_init #: Review a plan before applying it
+	terraform validate
+	terraform plan
 
 destroy: build/tf_init #: Destroy terraform infrastructure
 	terraform destroy -auto-approve
