--- a/website/Makefile
+++ b/website/Makefile
@@ -2,3 +2,6 @@ include ../common.mk
 
 deploy: index.html .venv/ready
 	$(venv) aws s3 cp $< s3://objects-dot-pubkey-dot-chat/$<
+
+test:
+	@echo okay!
