Fix cloudfront ordering problem

--- a/website/Makefile
+++ b/website/Makefile
@@ -1,7 +1,15 @@
 include ../common.mk
+SOURCES=index.html social_media_preview.jpg
 
-deploy: index.html .venv/ready
+deploy: $(patsubst %, build/%.deploy, $(SOURCES))
+
+build/index.html.deploy: index.html build/.dir
 	$(venv) aws s3 cp $< s3://objects-dot-pubkey-dot-chat/$<
+	touch $@
+
+build/%.deploy: % build/.dir
+	$(venv) aws s3 cp $< s3://objects-dot-pubkey-dot-chat/assets/$<
+	touch $@
 
 test:
 	@echo okay!
