--- a/infrastructure/dns/Makefile
+++ b/infrastructure/dns/Makefile
@@ -1,7 +1,8 @@
 include ../../common.mk
 
-test: #: Run a fake test
-	@echo "okay!"
+test: build/tf_init #: Run a fake test
+	terraform fmt -diff
+	terraform validate
 
 apply: build/nameservers #: Create AWS Resources
 
