--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -7,14 +7,46 @@ on:
     branches: [ "trunk" ]
 
 jobs:
-  test-linux:
+  test-ubuntu-20.04:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v4
     - name: Run Tests
       run: make test
-  test-macos:
+  test-ubuntu-22.04:
+    runs-on: ubuntu-22.04
+    steps:
+    - uses: actions/checkout@v4
+    - name: Run Tests
+      run: make test
+  test-ubuntu-24.04:
+    runs-on: ubuntu-24.04
+    steps:
+    - uses: actions/checkout@v4
+    - name: Run Tests
+      run: make test
+  test-macos-12:
     runs-on: macos-12
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install Terraform
+      run: |
+        brew tap hashicorp/tap
+        brew install hashicorp/tap/terraform
+    - name: Run Tests
+      run: make test
+  test-macos-13:
+    runs-on: macos-13
+    steps:
+    - uses: actions/checkout@v4
+    - name: Install Terraform
+      run: |
+        brew tap hashicorp/tap
+        brew install hashicorp/tap/terraform
+    - name: Run Tests
+      run: make test
+  test-macos-14:
+    runs-on: macos-14
     steps:
     - uses: actions/checkout@v4
     - name: Install Terraform
