--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,6 +14,8 @@ jobs:
         os: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
     steps:
     - uses: actions/checkout@v4
+    - name: Install Terraform
+      run: apt install terraform
     - run: make test
 
   macos:
