Make sure Docker is installed

--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,11 +14,13 @@ jobs:
         os: [ubuntu-20.04, ubuntu-22.04, ubuntu-24.04]
     steps:
     - uses: actions/checkout@v4
-    - name: Install Terraform
+    - name: Install HashiCorp Tools
       run: |
         wget -O- https://apt.releases.hashicorp.com/gpg | sudo gpg --dearmor -o /usr/share/keyrings/hashicorp-archive-keyring.gpg
         echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" | sudo tee /etc/apt/sources.list.d/hashicorp.list
-        sudo apt update && sudo apt install terraform
+        sudo apt-get update
+        sudo apt-get install terraform
+        sudo apt-get install packer
     - run: make test
 
   macos:
@@ -28,8 +30,9 @@ jobs:
         os: [macos-12, macos-13, macos-14]
     steps:
     - uses: actions/checkout@v4
-    - name: Install Terraform
+    - name: Install HashiCorp Tools
       run: |
         brew tap hashicorp/tap
         brew install hashicorp/tap/terraform
+        brew install hashicorp/tap/packer
     - run: make test
