Put out-of-band infrastructure in 'oob' directory

--- a/infrastructure/Makefile
+++ b/infrastructure/Makefile
@@ -2,7 +2,8 @@ include ../lib/common.mk
 include ../lib/tf.mk
 
 test: tf_lint #: Lint
-	make -C dns test
+	make -C oob test
+	make -C image test
 
 apply: ami oob terraform.tfstate #: Create AWS Resources
 
@@ -10,7 +11,7 @@ ami:
 	make -C image ami
 
 oob:
-	make -C dns apply
+	make -C oob apply
 
 clean: clean_build #: Clean up intermediate artifacts
 	make -C image clean
