Show chat in action

--- a/website/Makefile
+++ b/website/Makefile
@@ -1,7 +1,7 @@
 include ../lib/common.mk
 include ../lib/venv.mk
 
-SOURCES=index.html social_media_preview.jpg
+SOURCES=index.html social_media_preview.jpg screengrab.gif
 
 deploy: $(patsubst %, build/%.deploy, $(SOURCES))  #: Deploy changes to website
 
@@ -15,3 +15,17 @@ build/%.deploy: % build/.dir .venv/ready
 
 test:
 	@echo okay!
+
+# We don't list any pre-requisites here because we want to keep screengrab.gif
+# under version control. If a new screengrab movie is made, update this by hand.
+rebuild_screengrab:  #: Update screengrab.gif you record a new screengrab movie
+ifndef INPUT_MOVIE
+	$(error Define INPUT_MOVIE to point to a quicktime file)
+endif
+	make build/.dir
+	ffmpeg \
+		-i $(INPUT_MOVIE) \
+		-vf "fps=10,scale=640:-1:flags=lanczos" \
+		-c:v gif \
+		build/unoptimized.gif
+	gifsicle -O3 build/unoptimized.gif -o screengrab.gif
